--- a/CSS/StyleO.css
+++ b/CSS/StyleO.css
@@ -3,3 +3,41 @@ body{
     background-repeat: no-repeat;
     background-size: 100vw;
 }
+#principal{
+    left: 0;
+    top: 0;
+    margin: 0;
+    size: 100vw;
+    height: 90vh;
+    margin:0;
+}
+#uta{
+    position: relative;
+    top: 30%;
+    left: 30%;
+    height: 40%;
+    width: 40%;
+}
+iframe{
+    width: 100%;
+    height: 100%;
+}
+@font-face {
+    font-family: myOneFont;
+    src: url(../fonts/one\ piece\ font.ttf),  format('truetype');   /*compatibilidad con  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5  */
+}
+.titulo{
+    width: 99%;
+    height: 10%;    
+    text-align: center;
+}
+.titulo>h1{
+    font-family: myOneFont, Fantasy;/*Fuente*/
+    position: absolute;
+    text-align: center;
+    margin: 0px;
+    font-size: 7.5em;
+    color:rgb(9, 255, 0);
+    left: 38%;
+    top: 10%;
+}
