--- a/CSS/Style2.css
+++ b/CSS/Style2.css
@@ -1,5 +1,5 @@
 body{
-background-image:url(../img/Fondo2.png);
+background-image:url(../img/pesadilla-antes-navidad-santa-jack-6537cd40a66ab.png);
     background-repeat: no-repeat;
     background-size: 100vw;
 }
@@ -21,7 +21,13 @@ background-image:url(../img/Fondo2.png);
         font-size: 18px;
         margin: 0cm;
     }
-   
+    div>p{
+        position: relative;
+        font-family: myTwoFont, Fantasy;
+        color: rgb(51, 255, 0);
+        font-size: 2em;
+        margin: 0;
+    }
     .titulo>h1{
         font-family: myFirstFont, Fantasy;/*Fuente*/
         position: absolute;
@@ -29,5 +35,15 @@ background-image:url(../img/Fondo2.png);
         text-align: center;
         margin: 0px;
         font-size: 7.5em;
-        color:rgb(47, 0, 255);
+        color:rgb(234, 255, 0);
+    }
+    .regalo1{
+        position:relative;
+        top: 90%;
+        left: 19%;
+        bottom: 1em;
+        margin-left: 3em;
+        width: 20em;
+        margin-bottom: 0;
+        z-index: 2;
     }
