--- a/CSS/Style2.css
+++ b/CSS/Style2.css
@@ -1,5 +1,5 @@
 body{
-background-image:url(../img/pesadilla-antes-navidad-santa-jack-6537cd40a66ab.png);
+background-image:url(../img/pesadilla.png);
     background-repeat: no-repeat;
     background-size: 100vw;
 }
