--- a/CSS/Style2.css
+++ b/CSS/Style2.css
@@ -1,93 +1,101 @@
-body{
-background-image:url(../img/pesadilla.png);
+body {
+    background-image: url(../img/pesadilla.png);
     background-repeat: no-repeat;
     background-size: 100vw;
+    margin: 0;
+    overflow: hidden;
 }
-    @font-face {
-        font-family: myFirstFont;
-        src: url(../fonts/magic_school_one.ttf),  format('truetype');   /*compatibilidad con  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5  */
-    
-    }
-    .principal{
-        left: 0;
-        top: 0;
-        margin: 0;
-        size: 100vw;
-        height: 90vh;
-        margin:0;
-    }
-    .titulo{
-        position: relative;
-        font-size: 15px;
-        margin: 0cm;
-    }
-    div>p{
-        position: relative;
-        font-family: myTwoFont, Fantasy;
-        color: rgb(51, 255, 0);
-        font-size: 2em;
-        margin: 0;
-    }
-    .titulo>h1{
-        font-family: myFirstFont, Fantasy;/*Fuente*/
-        position: absolute;
-        width: 99%;
-        text-align: center;
-        margin: 0px;
-        font-size: 7.5em;
-        color:rgb(234, 255, 0);
-    }
-    .regalo1{
-        position:relative;
-        top: 90%;
-        left: 19%;
-        bottom: 1em;
-        margin-left: 3em;
-        width: 20em;
-        margin-bottom: 0;
-        z-index: 2;
-    }
+@font-face {
+    font-family: myFirstFont;
+    src: url(../fonts/magic_school_one.ttf),  format('truetype');   /*compatibilidad con  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5  */
 
-a>img{
-     /* tamaño 4em y auto para no descuadrar la imagen*/
+}
+#defaultCanvas0 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: block; /* Asegúrate de que el canvas se muestre como bloque */
+}
+
+.principal {
+    position: relative;
+    height: 90vh;
+}
+
+.titulo {
+    position: relative;
+    font-size: 15px;
+    margin: 0;
+}
+
+div > p {
+    position: relative;
+    font-family: myTwoFont, Fantasy;
+    color: rgb(51, 255, 0);
+    font-size: 2em;
+    margin: 0;
+}
+
+.titulo > h1 {
+    font-family: myFirstFont, Fantasy;
+    position: absolute;
+    width: 99%;
+    text-align: center;
+    margin: 0;
+    font-size: 7.5em;
+    color: rgb(234, 255, 0);
+}
+
+.regalo1 {
+    position: relative;
+    top: 90%;
+    left: 19%;
+    bottom: 1em;
+    margin-left: 3em;
+    width: 20em;
+    margin-bottom: 0;
+    z-index: 2;
+}
+
+a > img {
     width: 6em;
     height: auto;
     position: fixed;
 }
-a>img:hover{
+
+a > img:hover {
     width: 7em;
     height: auto;
 }
-.A{
+
+.A {
     width: 10em;
     position: fixed;
     padding-left: 12%;
 }
-#P{
+
+#P {
     width: 5em;
 }
-/* Definición de la animación */
+
 @keyframes moverIzquierdaDerecha {
     0% {
-      /* Estado inicial del cuadrado e imagen */
       transform: translateX(110vw);
     }
     50% {
-      /* Estado intermedio a la mitad de la animación */
       transform: translateX(50vw);
     }
     100% {
-      /* Estado final del cuadrado e imagen */
       transform: translateX(-10vw);
     }
-  }
-  
-  /* Estilo del cuadrado e imagen */
-  .imagen-superpuesta {
+}
+
+.imagen-superpuesta {
     width: 10%;
     height: auto;
     position: absolute;
     top: 20%;
     left: 0;
     animation: moverIzquierdaDerecha 8s ease-in-out infinite;
-  }
+}
