--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -1,34 +1,69 @@
-body{
-    background-image:url(../img/Tren.png);
+body {
+    background-image: url(../img/Tren.png);
     background-repeat: no-repeat;
     background-size: 100vw;
     height: 100vh;
     overflow: hidden;
     margin: 0;
 }
+
 @font-face {
     font-family: blood;
-    src: url(../fonts/Nabla.ttf),  format('truetype');   /*compatibilidad con  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5  */
+    src: url(../fonts/Nabla.ttf), format('truetype');
 }
-.principal{
+
+.principal {
     size: 100vw;
     height: 100vh;
 }
-.titulo>h1{
-    font-family: blood;/*Fuente*/
+
+.titulo>h1 {
+    font-family: blood;
     position: absolute;
     width: 99%;
     text-align: center;
     margin: 0px;
     font-size: 7.5em;
-    color:rgb(100, 0, 0);
+    color: rgb(100, 0, 0);
 }
-img{
+
+img {
     height: 20em;
     width: auto;
 }
-.img{
+
+.img {
     position: relative;
-    top:75%;
+    top: 75%;
     left: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+form {
+    width: 300px;
+    padding: 16px;
+    border-radius: 10px;
+    margin: auto;
+    background-color: #4fee058f;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+form label {
+    width: 72px;
+    font-weight: bold;
+    display: inline-block;
+}
+
+form input[type="text"],
+form input[type="email"] {
+    width: 100%;
+    padding: 3px 10px;
+    border: 1px solid #eb0707;
+    border-radius: 3px;
 }
